# exactIMM

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  config.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  lint.yml  tests.yml
audit/: 01-code-core.md  02-code-periphery.md  03-paper-math.md  04a-eq-vs-code.md  04b-experiments.md  04c-editorial.md  AUDIT_REPORT.md  STATUS.md
audit/raw/: 01-code-core-result.json  01-code-core-task-output.txt  02-code-periphery-result.json  02-code-periphery-task-output.txt  03-paper-math-extracted.json  03-verify-batch1.json  03-verify-batch2.json  03-verify-batch3.json  03-verify-batch4.json  04a-extracted.json  04a-findings.json  04a-verify-batch.json  04a-verify-batch1.json  04a-verify-batch2.json  04b-extracted.json  04b-findings.json  04b-verify-batch.json  04b-verify-batch1.json  04b-verify-batch2.json  04c-extracted.json  04c-findings.json  04c-verify-batch1.json  04c-verify-batch2.json  aggregate.py  all-findings.json  gen_md.py
data/real/: enso_sst.csv  nino12.txt  sp500_vix.csv  stock_bond.csv
docs/: CS_FinaleBis.tex
notebooks/: 01_filtering_quickstart.ipynb  02_filters_comparison.ipynb  README.md
prg/: __init__.py  simulate.py
prg/classes/: FMatrix.py  GSSParams.py  GSSSimulator.py  NoiseCovariance.py  __init__.py
prg/experiments/: __init__.py  fill_placeholders.py  make_figures.py  make_figures_real.py  make_paper_figures.py  make_real_structure_fig.py  make_vehicle_consigne_fig.py  metrics.py  models_paper.py  reference_filters.py  run_em.py  run_real_data.py  run_simulations.py  run_supervised.py  study.py
prg/filter/: __init__.py  gss_filter.py  main.py
prg/gui/: __init__.py  diagnostics.py  dialogs.py  main.py  main_window.py  matrix_widget.py  param_panel.py  plot_panel.py  session_state.py  workers.py
prg/learning/: __init__.py  semi_supervised.py  supervised.py
prg/models/: __init__.py  base_gss_model.py  model_em_K2_q1_s1.py  model_gss_K2_q1_s1.py  model_gss_K2_q1_s1_consigne.py  model_gss_K2_q1_s1_contrast.py  model_gss_K2_q1_s1_custom.py  model_gss_K2_q1_s2.py  model_gss_K2_q2_s1.py  model_gss_K2_q2_s2.py  model_gss_K2_q2_s2_custom.py  model_gss_K3_q1_s1.py  presets.py
prg/utils/: __init__.py  ab_constraint.py  exceptions.py  h5_constraint.py  input_signal.py  matrix_checks.py
results/enso/: e1_table.json  e1_table.tex  e2_table.json  e2_table.tex  e3_summary.json  e3_table.json  e3_table.tex
scripts/: build_enso_csv.py  e1_supervised_ab.py  e1_supervised_h5.py  e2_filter_comparison.py  e3_add_hamilton.py  e3_bw_em.py  fetch_sp500_vix.py  labels.py  params_utils.py  sync_wiki.sh  verify_19_20_equivalence.py  verify_ab_compat.py  verify_h5_compat.py
scripts/baselines/: __init__.py  hamilton_msar.py  kalman_single.py
scripts/figures/: figure1_data_overview.py  figure3_em_restarts.py  figure4_regime_trace.py
tests/: test_ab_constraint.py  test_cns_validity.py  test_consigne.py  test_consigne_gui.py  test_filter_modes.py  test_fmatrix.py  test_gss_filter.py  test_gss_params.py  test_gss_simulator.py  test_h5_constraint.py  test_main_window_gui.py  test_no_stale_refs.py  test_noise_covariance.py  test_param_panel_gui.py  test_reference_filters.py  test_semi_supervised.py  test_session_state.py  test_supervised.py
wiki/: API-Overview.md  Citing.md  GUI-Guide.md  Home.md  Installation.md  Paper-Reproduce.md  README.md  Tutorial.md
