[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fofgss"
version = "0.10.0"
description = "Fast optimal filtering in Gaussian switching systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Stéphane Derrode", email = "stephane.derrode@ec-lyon.fr" },
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["prg"]
omit = ["tests/*"]
