[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exactIMM"
version = "0.13.1"
description = "Fast optimal filtering in Gaussian switching systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Stéphane Derrode", email = "stephane.derrode@ec-lyon.fr" },
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-qt>=4.4",
    "mypy>=1.10",
    "ruff>=0.6",
]
paper = [
    "matplotlib>=3.8",
    "yfinance>=0.2",
    "requests>=2.31",
    "statsmodels>=0.14",
    "hmmlearn>=0.3",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["prg"]
omit = ["tests/*"]

[tool.mypy]
# Strict typing is enforced only on prg/utils/h5_constraint.py (the
# central, mathematical, well-tested module).  Other modules are
# imported in "silent" mode to avoid noise from incomplete annotations
# in numpy stubs and the rest of the codebase.
files = ["prg/utils/h5_constraint.py"]
strict = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "prg/models/model_*.py",   # auto-generated by GUI / supervised / EM
]

[tool.ruff.lint]
# Conservative starting ruleset: catches real bugs (F = pyflakes), keeps
# imports tidy (I), and nudges toward modern Python idioms (UP).
# Style-only categories (E pycodestyle, W warnings, B bugbear) are intentionally
# off for now — they surfaced ~80 changes that are judgment calls (one-line
# assignments in numerical model files, intentional unused vars in experiment
# placeholders, etc.). Tighten incrementally in follow-up PRs.
select = ["F", "I", "UP"]
ignore = [
    "F841",  # unused-variable — many legit placeholders in experiments/figures
]
